# hardware_samsung_slsi

contexthub/: .gitignore  README.md
contexthub/firmware/: build.sh  copy_new_erd_from_latest.py  firmware.mk  toolchain-setup.sh
contexthub/firmware/tools/: Makepad_528
contexthub/firmware/variant/: README.md  variant.mk
contexthub/multihal2_0/: Android.mk
contexthub/multihal2_0/exynos_subhal/: SensorsSubHal.cpp  SensorsSubHal.h  (+1 more)
contexthub_r/firmware/: firmware.mk
exynos2100/fastboot/: Android.bp
exynos2100/libsbwc-dpu/: Android.bp  Android.mk  sbwcdecoder_dpu.cpp  usage.cpp
exynos2100/libteegatekeeper/: Android.bp
exynos3830/: Android.mk
exynos3830/libteegatekeeper/: Android.mk
exynos9630/: Android.mk  exynos9630.mk
exynos9630/libcamera3/: Android.mk  ExynosCameraAvailabilityTable.h  ExynosCameraConfig.h
exynos9630/libdqeinterface/: Android.mk  dqeInterface.cpp
exynos9630/libhdr/: Android.mk  libhdr_plugin_exynos9630.cpp
exynos9630/libhdrinterface/: Android.mk  hdrInterface.cpp
exynos9630/libteegatekeeper/: Android.mk
exynos9810/: Android.bp  Android.mk  exynos9810.mk
exynos9810/include/: sec_g2d_comp.h  vdis_interface.h
exynos9810/libcamera3/: Android.mk  ExynosCameraAvailabilityTable.h  ExynosCameraConfig.h  SecCameraConfig-common.h
exynos9810/libgatekeeper/: Android.mk
exynos9810/libkeymaster/: Android.mk
exynos9810/mobicore/: Android.bp
exynos9820/: Android.bp  Android.mk  exynos9820.mk
exynos9820/libcamera3/: Android.mk  ExynosCameraAvailabilityTable.h  ExynosCameraConfig.h
exynos9820/libeden/: edentest
exynos9820/libgatekeeper/: exynos_gatekeeper.cpp  tlcTeeGatekeeper_if.cpp
exynos9820/libkeymaster/: Android.mk
exynos9820/mmip/: Android.mk
exynos9820/mobicore/: Android.bp
exynos9820/openvx/: Android.mk
exynos9830/: Android.mk
interfaces/: Android.bp
libbt/: Android.bp  README.md
libbt/include/: bdroid_buildcfg.h  bt_vendor_slsi.h
libbt/src/: bt_vendor_slsi.c
s5e9815/libhdr/: Android.mk  dynamic_info_legacy_support.h  libhdr10p.cpp  libhdr10p.h  libhdr_exynos9815_struct.h  libhdr_exynos9815_wcg_lut.h  libhdr_plugin_exynos9815.cpp  libhdr_plugin_exynos9815.h
s5e9815/libteegatekeeper/: Android.mk
scsc_wifibt/wifi_hal/: Android.mk  common.cpp  common.h  cpp_bindings.cpp  cpp_bindings.h  gscan.cpp  link_layer_stats.cpp  nan_common.h  roam.cpp  rtt.cpp  wifi_hal.cpp  wifi_logger.cpp  wifi_nan.cpp  wifi_nan_data_path.cpp  wifi_offload.cpp
scsc_wifibt/wpa_supplicant_lib/: Android.mk  driver_cmd_nl80211.c  driver_cmd_nl80211.h
sgpu/libdrm_sgpu/: Android.bp  Android.sources.bp  Makefile.sources  amdgpu-symbols.txt  amdgpu.h  amdgpu_asic_id.c  amdgpu_bo.c  amdgpu_cs.c  amdgpu_device.c  amdgpu_gpu_info.c  amdgpu_internal.h  amdgpu_vamgr.c  amdgpu_vm.c  libdrm_sgpu.pc.in  meson.build  sgpu_drm.h  sgpu_sysfs.c  sgpu_trace.c
sgpu/sgpu_gralloc/: Android.bp
(+1055 files in other folders)
